[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/ui/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/ui/barProgress.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/ui/barOver.png" type="Texture" id=3]
[ext_resource path="res://assets/gfx/ui/turn9Patch.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/font31.tres" type="DynamicFont" id=5]

[node name="hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 16.0

[node name="totalHumansDelay" type="TextureProgress" parent="."]
anchor_right = 1.0
margin_bottom = 16.0
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_under = Color( 0.168627, 0.180392, 0.258824, 1 )
tint_progress = Color( 1, 0.678431, 0.231373, 1 )
nine_patch_stretch = true

[node name="totalHumans" type="TextureProgress" parent="."]
anchor_right = 1.0
margin_bottom = 16.0
value = 100.0
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.137255, 0.427451, 0.478431, 1 )
nine_patch_stretch = true

[node name="savedHumans" type="TextureProgress" parent="."]
anchor_right = 1.0
margin_bottom = 16.0
value = 20.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.705882, 0.839216, 0.270588, 1 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 2

[node name="turnWindow" type="NinePatchRect" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 15.0
margin_right = 80.0
margin_bottom = 39.0
texture = ExtResource( 4 )
patch_margin_left = 2
patch_margin_right = 2

[node name="RichTextLabel" type="RichTextLabel" parent="turnWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "text"
text = "text"
scroll_active = false

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_right = 72.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.580392, 0.823529, 0.831373, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Saved 100% / 100%"
align = 1

[node name="Tween" type="Tween" parent="."]
